<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:singleLine="true"
        android:text="@string/music_name"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvArtist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvName"
        android:layout_marginBottom="5dp"
        android:text="@string/music_artist"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvMusicTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignBaseline="@+id/tvArtist"
        android:layout_marginRight="10dp"
        android:text="@string/music_time"
        android:textSize="15sp"/>


</RelativeLayout>